--- a/src/front/styles/global.css
+++ b/src/front/styles/global.css
@@ -22,11 +22,27 @@ body {
 
 a {
   text-decoration: none;
+  color: var(--primary-color);
+}
+a:visited {
+  color: var(--primary-color-dark);
 }
 
 img {
   max-width: 100%;
   height: auto;
+}
+
+h1 {
+  text-align: center;
+}
+
+fieldset {
+  width: 100%;
+  border: none;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 1rem;
 }
 
 .visuallyHidden {
@@ -57,8 +73,6 @@ img {
 @media (min-width: 768px) {
   .mainWrapper {
     padding: 32px 54px 0;
-
-    /* overflow-x: auto; */
   }
 }
 
