--- a/src/front/styles/variables.css
+++ b/src/front/styles/variables.css
@@ -15,28 +15,12 @@
 
   /* colors */
   --primary-color: #EF233C;
+  --primary-color-dark: #980B1C;
   --secondary-color: #537A5A;
   --text-color: #2B2D42;
   --line-color: #8D99AE;
   --background-color: #EDF2F4;
   --white-color: #FFFFFF;
-  /* --background-color: #000;
-  --dark-orange-color: #fd3f15;
-  --light-orange-color: #ff6b03;
-  --dark-yellow-color: #ff9850;
-  --light-yellow-color: #fee5ca;
-  --green-color: #519730;
-  --tooltip-color: #000;
-  --light-brown-color: #2e1e12;
-  --middle-brown-color-1: #281609;
-  --middle-brown-color-2: #381f09;
-  --dark-brown-color: #261609;
-  --input-field-color: #141414;
-  --input-placeholder-color: #434343;
-  --alert-text: #fd3f15;
-  --hover-button: #4c260a;
-  --hover-orange-color: #e56003;
-  --active-orange-color: #e66103; */
 
   /* media */
   --mobile-width: 360px;
